--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 }
 
 .container {
-  width: 800px;
+  width: 600px;
   margin: 40px auto;
   display: flex;
   flex-direction: column;
@@ -27,6 +27,7 @@ form {
   width: 100%;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 
